<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerConstraintLayout" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBEF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/registerContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/register"
                android:textColor="#514337"
                android:textSize="38sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/email"
                android:textColor="#514337"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/password"
                android:textColor="#514337"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/confirm_password"
                android:textColor="#514337"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/input_confirm_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/languageLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:text="@string/language"
                android:textColor="#514337"
                android:textSize="23sp" />

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edittext_background"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/addressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/address"
                android:textColor="#514337"
                android:textSize="23sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp">

                <EditText
                    android:id="@+id/zipCodeInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/zipCode"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/zipBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/zipBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="#EDD3BB"
                    android:text="@string/search"
                    android:textColor="#5D5C5C"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/zipCodeInput"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addressContaint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/cityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="大阪市"
                    android:textColor="#514337"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wardTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="北区"
                    android:textColor="#514337"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cityTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/townTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="梅田"
                    android:textColor="#514337"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/wardTextView"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Spinner
                android:id="@+id/chomSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edittext_background"
                android:minHeight="48dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <Spinner
                android:id="@+id/streetSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edittext_background"
                android:minHeight="48dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <Spinner
                android:id="@+id/infSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edittext_background"
                android:minHeight="48dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#EDD3BB"
                android:text="@string/toregister"
                android:textColor="#5D5C5C"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>