<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"  > <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:orientation="vertical"
    android:background="#FFFFFF"
    android:clipChildren="false"
    android:clipToPadding="false">

    <ImageView
        android:id="@+id/rrm9ec9vx88d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:adjustViewBounds="true" android:scaleType="fitXY"
        android:src="@drawable/Vector" />

    <View
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:background="#7F6B59" />

    <LinearLayout
        android:id="@+id/rwr29ht2gwwr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginHorizontal="1dp"
        android:background="#FFFBEF"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingVertical="85dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/rsub9i9yqncb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/login"
            android:textColor="#514337"
            android:textSize="52sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/sign_up_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:text="@string/newuser"
            android:textColor="#514337" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>
</LinearLayout>

</ScrollView>