<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back_button2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBEF"
    >
<!--    tools:context=".YourActivity"-->
    <!-- 左上角返回鍵 -->
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="60dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/return_b"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 主要內容 -->
    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="406dp"
        android:layout_height="458dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/address_setting"
            android:textColor="#000000"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/currentAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentAddress"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/currentAddressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/postalCodeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/zipCode"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/zipBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/zipBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="#EDD3BB"
                android:text="@string/search"
                android:textColor="#5D5C5C"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addressContaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#514337"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/wardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#514337"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cityTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/townTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#514337"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/wardTextView"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Spinner
            android:id="@+id/chomSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:minHeight="48dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <Spinner
            android:id="@+id/streetSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:minHeight="48dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <Spinner
            android:id="@+id/infSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:minHeight="48dp"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <!-- 適用按鈕（置底、在 BottomNavigationView 上方） -->
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="153dp"
        android:layout_height="75dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/locationApplyBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="設定按鈕背景"
            android:src="@drawable/settingsbtn" />

        <TextView
            android:id="@+id/buttonText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/apply"
            android:textColor="#5D5042"
            android:textSize="24sp" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutMain"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutMain"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <!-- 底部導覽欄 -->
<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottomMenu"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="72dp"-->
<!--        android:background="#D9EC85"-->
<!--        app:itemBackground="@drawable/nav_item_background"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:menu="@menu/bottom_nav_menu" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
